name:                pktan
version:             0.1.0.0
synopsis:            simple ETH packet generator and capture toolbased on libpcap
license:             BSD3
license-file:        LICENSE
author:              Chetan Taralekar
maintainer:          chetant@gmail.com
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable pktgen
  main-is:             Generate.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                      ,bytestring
                      ,cmdargs
                      ,pcap
                      ,split
  hs-source-dirs:      src
  default-language:    Haskell2010

executable pktcap
  main-is:             Capture.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                      ,bytestring
                      ,cmdargs
                      ,pcap
                      ,split
  hs-source-dirs:      src
  default-language:    Haskell2010
